<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTask">

    <EditText
        android:id="@+id/NumeroOrdem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Ordem"
        android:inputType="textPersonName"
        android:labelFor="@id/textView5"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/NumeroOrdem"
        android:text="@string/NumeroOrdem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
        app:layout_constraintStart_toEndOf="@+id/NumeroOrdem"
        app:layout_constraintTop_toTopOf="@+id/buttonSubmit" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumeroOrdem" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        app:layout_constraintBaseline_toBaselineOf="@+id/NumeroOrdem"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="412dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/vazio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxCntrVazio"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:padding="16dp"
                    android:text="@string/TipoFotoContainerVazio" />

                <Button
                    android:id="@+id/cntrVazioFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/Nova_foto"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Bobinas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxBobinas"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/Bobinas" />

                <Button
                    android:id="@+id/bobinas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Nova_foto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/CntrPortaAberta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxPortaAberta"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/CntrPortaAberta" />

                <Button
                    android:id="@+id/cntrPortaAberta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Nova_foto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/CheckList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxChecklist"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/Checklist" />

                <Button
                    android:id="@+id/checkList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Nova_foto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lacre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxLacre"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/Lacre" />

                <Button
                    android:id="@+id/Lacre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Nova_foto" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/PortaLacrada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/TipoFotoContainerVazio"
                        tools:srcCompat="@drawable/ic_baseline_crop_free_24" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxPortaLacrada"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:text="@string/PortaLacrada" />

                <Button
                    android:id="@+id/cntrPortaLacrada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Nova_foto" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>